# matiopy

./: LICENSE  README.md  pyproject.toml
src/matiopy/: __init__.py
src/matiopy.egg-info/: PKG-INFO
src/matiopy/transform2d/: transform2d.py
src/matiopy/vector2d/: vector2d.py
src/transform2d/: transform2d.py
tests/: test_transform2d.py  test_vector2d.py
