[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["matiopy"]

[tool.setuptools.package-dir]
matiopy = "matiopy"

[project]
name = "matiopy"
version = "1.0.0"
description = "A library for 2D transformations and vector operations"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "?", email = "?"}
]
dependencies = [
    "numpy>=1.20.0"
]

[project.urls]
Homepage = "?"